--- a/src/main/resources/templates/main/menu.html
+++ b/src/main/resources/templates/main/menu.html
@@ -18,6 +18,8 @@
                 <p>
                 META RPG
             </p>
+
+            <h1 th:text="|${session.userName}님 환영합니다 !!|"></h1>
             <button type="button" class="huntmapBtn"onclick="location.href='../hunt/huntSelectMap.html'"> 사냥터 입장</button>
             
 
