--- a/src/main/resources/templates/hunt/huntResult.html
+++ b/src/main/resources/templates/hunt/huntResult.html
@@ -2,7 +2,21 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="hunt.css">
+    <script>
+        jQuery(function($) {
+            $("body").css("display", "none");
+            $("body").fadeIn(2000);
+            $("a.transition").click(function(event){
+                event.preventDefault();
+                linkLocation = this.href;
+                $("body").fadeOut(1000, redirectPage);
+            });
+            function redirectPage() {
+                window.location = linkLocation;
+            }
+        });
+    </script>
+    <link rel="stylesheet" href="/css/hunt.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -17,27 +31,27 @@
 </head>
 
 <body>
-    <div id="Wrapper">
+    <div id="WrapperResult">
         <div id="title">
-            <p class="titleMessage" onclick="location.href='index.html'">소드마스터의 시대가 오고있다!</p>
+            <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
         </div>
         <div class="titlebox">
-            <h1>사냥터 결과</h1>
+            <h1>RESULT</h1>
         </div>
 
         <div class="result">
            <div>
-            <p>획득 경험치: 300exp</p>
-            <p>획득 골드: 3000G</p>
+            <p>Reward Exp: 300 exp</p>
+            <p>Reward Gold: 3000 G</p>
            </div>
         </div>
 
         <div class="buttonBox">
             <div>
-                <button class="resultBtn" onclick="location.href='./huntSelectMap.html'">사냥터로 가기</button>
+                <button class="resultBtn" onclick="location.href='/hunt/huntSelectMap'">Hunt</button>
             </div>
             <div>
-                <button class="resultBtn" onclick="location.href='../main/menu.html'">메인으로 가기</button>
+                <button class="resultBtn" onclick="location.href='/user/menu'">Menu</button>
             </div>
         </div>
 
