--- a/src/main/resources/templates/hunt/huntSelectMap.html
+++ b/src/main/resources/templates/hunt/huntSelectMap.html
@@ -2,7 +2,21 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="../../static/index.css">
+    <script>
+        jQuery(function($) {
+            $("body").css("display", "none");
+            $("body").fadeIn(2000);
+            $("a.transition").click(function(event){
+                event.preventDefault();
+                linkLocation = this.href;
+                $("body").fadeOut(1000, redirectPage);
+            });
+            function redirectPage() {
+                window.location = linkLocation;
+            }
+        });
+    </script>
+    <link rel="stylesheet" href="/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -17,11 +31,11 @@
 </head>
 
 <body>
-    <div id="Wrapper">
+    <div id="Wrapper3">
         <div id="title">
-            <p class="titleMessage" onclick="location.href='../../static/index.html'">소드마스터의 시대가 오고있다!</p>
+            <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
             <div class="titlebox">
-                <h1>사냥터 선택</h1>
+                <h1>Select Map</h1>
             </div>
 
             <div class="huntContainer">
@@ -29,58 +43,60 @@
                     <p class="userLevel">1</p>
                     <img src="http://www.hearthcards.net/cards/ac01cc14.png" alt="">
                     
-                        <button class="usertype" onclick="location.href='../main/type.html'">속성 변경</button>
+                        <button class="usertype" onclick="location.href='/user/type'">Type Change</button>
                     
                 </div>
 
                 <div class="buttonBox">
                     <div class="huntBtnBox">
-                        <button class="huntBtn" onclick="location.href='hunt1.html'">사냥터 1</button>
-                        <p class="level">권장 레벨 :0~10</p>
+                        <button class="huntBtn" onclick="location.href='/hunt/hunt1'">
+                            Naxxramas</button>
+                        <p class="level">recommended level : 0~10</p>
                     </div>
                     <div class="huntBtnBox">
-                        <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 2</button>
-                        <p class="level">권장 레벨 :0~10</p>
+                        <button class="huntBtn" onclick="location.href='/hunt/hunt2'">
+                            Sunwell Plateau</button>
+                        <p class="level">recommended level : 0~20</p>
                     </div>
                     <div class="huntBtnBox">
-                        <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                        <p class="level">권장 레벨 :0~10</p>
+                        <button class="huntBtn" onclick="location.href='/hunt/hunt3'">Icecrown Citadel</button>
+                        <p class="level">recommended level : 20~30</p>
                     </div>
                     <div class="huntBtnBox">
-                        <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                        <p class="level">권장 레벨 :0~10</p>
+                        <button class="huntBtn" onclick="location.href='/hunt/hunt4'">Dragon Soul</button>
+                        <p class="level">recommended level : 30~40</p>
                     </div>
                     <div class="huntBtnBox">
-                        <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                        <p class="level">권장 레벨 :0~10</p>
+                        <button class="huntBtn" onclick="location.href='/hunt/hunt5'">Orgrimmar</button>
+                        <p class="level">recommended level : 40~50</p>
                     </div>
                 </div>
                 
                 <div class="buttonBox2">
                     <div class="huntBtnBox">
-                        <button class="huntBtn" onclick="location.href='hunt1.html'">사냥터 1</button>
-                        <p class="level">권장 레벨 :0~10</p>
+                        <button class="huntBtn" onclick="location.href='/hunt/hunt6'">Hellfire Citadel</button>
+                        <p class="level">recommended level : 50~60</p>
                     </div>
                     <div class="huntBtnBox">
-                        <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 2</button>
-                        <p class="level">권장 레벨 :0~10</p>
+                        <button class="huntBtn" onclick="location.href='/hunt/hunt7'">Antorus</button>
+                        <p class="level">recommended level : 60~70</p>
                     </div>
                     <div class="huntBtnBox">
-                        <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                        <p class="level">권장 레벨 :0~10</p>
+                        <button class="huntBtn" onclick="location.href='/hunt/hunt8'">Ny'alotha</button>
+                        <p class="level">recommended level : 70~80</p>
                     </div>
                     <div class="huntBtnBox">
-                        <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                        <p class="level">권장 레벨 :0~10</p>
+                        <button class="huntBtn" onclick="location.href='/hunt/hunt9'">Sepulcher Of The First Ones</button>
+                        <p class="level">recommended level : 80~90</p>
                     </div>
                     <div class="huntBtnBox">
-                        <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                        <p class="level">권장 레벨 :0~10</p>
+                        <button class="huntBtn" onclick="location.href='/hunt/hunt10'">Aberrus</button>
+                        <p class="level">recommended level : 90~100</p>
                     </div>
                 </div>
             </div>
 
-            <button class="backToMenu" onclick="location.href='../main/menu.html'">뒤로가기</button>
+            <button class="backToMenu" onclick="location.href='/user/menu'">Back</button>
         </div>
 
 </body>
