--- a/src/main/resources/templates/upgrade/upgrade.html
+++ b/src/main/resources/templates/upgrade/upgrade.html
@@ -2,7 +2,21 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="upgrade.css">
+    <script>
+        jQuery(function($) {
+            $("body").css("display", "none");
+            $("body").fadeIn(2000);
+            $("a.transition").click(function(event){
+                event.preventDefault();
+                linkLocation = this.href;
+                $("body").fadeOut(1000, redirectPage);
+            });
+            function redirectPage() {
+                window.location = linkLocation;
+            }
+        });
+    </script>
+    <link rel="stylesheet" href="/css/upgrade.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -19,7 +33,7 @@
 <body>
     <div id="Wrapper">
         <div id="title">
-            <p class="titleMessage" onclick="location.href='../../static/index.html'">소드마스터의 시대가 오고있다!</p>
+            <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
         </div>
         <div class="titlebox">
             <h1>Enchant</h1>
@@ -27,8 +41,8 @@
 
         <div class="upgraderesult">
            <div>
-            <p>현재 강화 레벨: 1</p>
-            <p>총 공력력: 15000 ATK</p>
+            <p>Current Enhancement Level: 1</p>
+            <p>Total STR: 15000 ATK</p>
            </div>
         </div>
 
@@ -36,23 +50,23 @@
 
         <div class="upgradeProbability">
             <div class="upgradeSuccess">
-                <p>강화 성공 시</p>
-                <p>강화 레벨 : 현재 + 1</p>
-                <p>총 공격력 : 15000 ATK (@@%) </p>
+                <p>Upgrade Success</p>
+                <p>Upgrade Level : 현재 + 1</p>
+                <p>Total STR : 15000 ATK (@@%) </p>
             </div>
             <div class="upgradeFail">
-                <p>강화 실패 시</p>
-                <p>강화 레벨 : 현재 - 1</p>
-                <p>총 공격력 : 15000 ATK (@@%) </p>
+                <p>Upgrade Fail</p>
+                <p>Upgrade Level : 현재 - 1</p>
+                <p>Total STR : 15000 ATK (@@%) </p>
             </div>
         </div>
 
    
             <div class="buttonBox1">
-                <button class="upgradeBtn" onclick="location.href='./upgradeResult.html'">강화 하기</button>
+                <button class="upgradeBtn" onclick="location.href='/upgrade/upgradeResult'">Upgrade</button>
             </div>
             <div>
-                <button class="backBtn" onclick="location.href='../main/menu.html'">뒤로 가기</button>
+                <button class="backBtn" onclick="location.href='/user/menu'">Menu</button>
             </div>
 
 
