[#51] UpgradeController 및 thymeleaf 적용

--- a/src/main/resources/templates/main/menu.html
+++ b/src/main/resources/templates/main/menu.html
@@ -23,7 +23,7 @@
             <button type="button" class="huntmapBtn"onclick="location.href='../hunt/huntSelectMap.html'"> 사냥터 입장</button>
             
 
-            <button type="button" class="upgradebtn" onclick="location.href='../upgrade/upgrade.html'">강화하기</button>
+            <button type="button" class="upgradebtn" onclick="location.href='/upgrade/upgrade'">강화하기</button>
         
 
             <button type="button" class="logoutBtn" onclick="location.href='../../static/index.html'">로그아웃</button>
