기존 html legacy 폴더로 이동

--- a/src/main/resources/templates/legacy/hunt/hunt1.html
+++ b/src/main/resources/templates/legacy/hunt/hunt1.html
@@ -50,7 +50,7 @@
                             <button id="attack">공격</button>
                         </div>
                         <div>
-                            <button onclick="location.href='./huntSelectMap.html'">도망</button>
+                            <button onclick="location.href='huntSelectMap.html'">도망</button>
                         </div>
                     </div>
 
@@ -69,6 +69,6 @@
         </div>
 
     </div>
-    <script defer src="./hunt.js"></script>
+    <script defer src="hunt.js"></script>
 </body>
 </html>
