--- a/src/main/resources/templates/legacy/main/loginPage.html
+++ b/src/main/resources/templates/legacy/main/loginPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../../static/index.css">
+    <link rel="stylesheet" href="../../../static/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -13,7 +13,7 @@
     <div id="Wrapper">
 
         <div id="title">
-            <p class="titleMessage" onclick="location.href='../../static/index.html'">소드마스터의 시대가 오고있다!</p>
+            <p class="titleMessage" onclick="location.href='../../../static/index.html'">소드마스터의 시대가 오고있다!</p>
             <div class="main">
                 <p>
                 META RPG
@@ -27,7 +27,7 @@
                     <!--<button type="button" class="loginBtn" onclick="location.href='./menu.html'">접속하기</button>-->
                 </form>
                    
-                 <button type="button" class="logoutBtn" onclick="location.href='../../static/index.html'">나가기</button>
+                 <button type="button" class="logoutBtn" onclick="location.href='../../../static/index.html'">나가기</button>
             
             </div>
         </div>
