--- a/src/main/resources/templates/legacy/main/type.html
+++ b/src/main/resources/templates/legacy/main/type.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="./type.css">
+  <link rel="stylesheet" href="type.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
@@ -19,7 +19,7 @@
 <body>
   <div id="Wrapper">
 
-    <div id="title" onclick="location.href='../../static/index.html'">
+    <div id="title" onclick="location.href='../../../static/index.html'">
       <p class="titleMessage">소드마스터의 시대가 오고있다!</p>
         
     </div>
