--- a/src/main/resources/templates/legacy/upgrade/upgrade.html
+++ b/src/main/resources/templates/legacy/upgrade/upgrade.html
@@ -19,7 +19,7 @@
 <body>
     <div id="Wrapper">
         <div id="title">
-            <p class="titleMessage" onclick="location.href='../../static/index.html'">소드마스터의 시대가 오고있다!</p>
+            <p class="titleMessage" onclick="location.href='../../../static/index.html'">소드마스터의 시대가 오고있다!</p>
         </div>
         <div class="titlebox">
             <h1>Enchant</h1>
