--- a/src/main/resources/templates/legacy/hunt/huntResult.html
+++ b/src/main/resources/templates/legacy/hunt/huntResult.html
@@ -34,10 +34,10 @@
 
         <div class="buttonBox">
             <div>
-                <button class="resultBtn" onclick="location.href='./huntSelectMap.html'">사냥터로 가기</button>
+                <button class="resultBtn" onclick="location.href='huntSelectMap.html'">사냥터로 가기</button>
             </div>
             <div>
-                <button class="resultBtn" onclick="location.href='../main/menu.html'">메인으로 가기</button>
+                <button class="resultBtn" onclick="location.href='../../main/menu.html'">메인으로 가기</button>
             </div>
         </div>
 
