--- a/src/main/resources/templates/legacy/hunt/huntSelectMap.html
+++ b/src/main/resources/templates/legacy/hunt/huntSelectMap.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="../../static/index.css">
+    <link rel="stylesheet" href="../../../static/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -19,7 +19,7 @@
 <body>
     <div id="Wrapper">
         <div id="title">
-            <p class="titleMessage" onclick="location.href='../../static/index.html'">소드마스터의 시대가 오고있다!</p>
+            <p class="titleMessage" onclick="location.href='../../../static/index.html'">소드마스터의 시대가 오고있다!</p>
             <div class="titlebox">
                 <h1>사냥터 선택</h1>
             </div>
@@ -29,7 +29,7 @@
                     <p class="userLevel">1</p>
                     <img src="http://www.hearthcards.net/cards/ac01cc14.png" alt="">
                     
-                        <button class="usertype" onclick="location.href='../main/type.html'">속성 변경</button>
+                        <button class="usertype" onclick="location.href='../../main/type.html'">속성 변경</button>
                     
                 </div>
 
@@ -80,7 +80,7 @@
                 </div>
             </div>
 
-            <button class="backToMenu" onclick="location.href='../main/menu.html'">뒤로가기</button>
+            <button class="backToMenu" onclick="location.href='../../main/menu.html'">뒤로가기</button>
         </div>
 
 </body>
