--- a/src/main/resources/templates/upgrade/upgrade.html
+++ b/src/main/resources/templates/upgrade/upgrade.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="upgrade.css">
     <script>
         jQuery(function($) {
             $("body").css("display", "none");
@@ -21,56 +22,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="Wrapper">
-        <div id="title">
-            <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
-        </div>
-        <div class="titlebox">
-            <h1>Enchant</h1>
-        </div>
+<div id="Wrapper">
+    <div id="title">
+        <p class="titleMessage" onclick="location.href='../../static/index.html'">소드마스터의 시대가 오고있다!</p>
+        <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
+    </div>
+    <div class="titlebox">
+        <h1>Enchant</h1>
+    </div>
 
-        <div class="upgraderesult">
-           <div>
+    <div class="upgraderesult">
+        <div>
+            <p>현재 강화 레벨: 1</p>
+            <p>총 공력력: 15000 ATK</p>
             <p>Current Enhancement Level: 1</p>
             <p>Total STR: 15000 ATK</p>
-           </div>
         </div>
-
-      
-
-        <div class="upgradeProbability">
-            <div class="upgradeSuccess">
-                <p>Upgrade Success</p>
-                <p>Upgrade Level : 현재 + 1</p>
-                <p>Total STR : 15000 ATK (@@%) </p>
-            </div>
-            <div class="upgradeFail">
-                <p>Upgrade Fail</p>
-                <p>Upgrade Level : 현재 - 1</p>
-                <p>Total STR : 15000 ATK (@@%) </p>
-            </div>
-        </div>
-
-   
-            <div class="buttonBox1">
-                <button class="upgradeBtn" onclick="location.href='/upgrade/upgradeResult'">Upgrade</button>
-            </div>
-            <div>
-                <button class="backBtn" onclick="location.href='/user/menu'">Menu</button>
-            </div>
-
-
     </div>
+
+
+
+    <div class="upgradeProbability">
+        <div class="upgradeSuccess">
+            <p>강화 성공 시</p>
+            <p>강화 레벨 : 현재 + 1</p>
+            <p>총 공격력 : 15000 ATK (@@%) </p>
+            <p>Upgrade Success</p>
+            <p>Upgrade Level : 현재 + 1</p>
+            <p>Total STR : 15000 ATK (@@%) </p>
+        </div>
+        <div class="upgradeFail">
+            <p>강화 실패 시</p>
+            <p>강화 레벨 : 현재 - 1</p>
+            <p>총 공격력 : 15000 ATK (@@%) </p>
+            <p>Upgrade Fail</p>
+            <p>Upgrade Level : 현재 - 1</p>
+            <p>Total STR : 15000 ATK (@@%) </p>
+        </div>
+    </div>
+
+
+    <div class="buttonBox1">
+        <button class="upgradeBtn" onclick="location.href='./upgradeResult.html'">강화 하기</button>
+        <button class="upgradeBtn" onclick="location.href='/upgrade/upgradeResult'">Upgrade</button>
+    </div>
+    <div>
+        <button class="backBtn" onclick="location.href='../main/menu.html'">뒤로 가기</button>
+        <button class="backBtn" onclick="location.href='/user/menu'">Menu</button>
+    </div>
+
+
+</div>
 </body>
 
 </html>
