--- a/src/main/resources/templates/hunt/huntResult.html
+++ b/src/main/resources/templates/hunt/huntResult.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="hunt.css">
+    <link rel="stylesheet" href="upgrade.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -19,26 +19,31 @@
 <body>
 <div id="Wrapper">
     <div id="title">
-        <p class="titleMessage" onclick="location.href='index.html'">소드마스터의 시대가 오고있다!</p>
+        <p class="titleMessage" onclick="location.href='../../static/index.html'">소드마스터의 시대가 오고있다!</p>
     </div>
     <div class="titlebox">
-        <h1>사냥터 결과</h1>
+        <h1>강화 결과</h1>
     </div>
 
     <div class="result">
-        <div>
-            <p>획득 경험치: 300exp</p>
-            <p>획득 골드: 3000G</p>
+        <div class="statusWrapper">
+            <div class="status">
+                <h2>유저</h2>
+                <p class="hp"><img src="../img/hpbar.webp" alt=""></p>
+            </div>
+            <div class="cardimg">
+                <img src="http://www.hearthcards.net/cards/ac01cc14.png" alt="">
+            </div>
         </div>
     </div>
 
     <div class="buttonBox">
-        <div>
-            <button class="resultBtn" onclick="location.href='./huntSelectMap.html'">사냥터로 가기</button>
-        </div>
-        <div>
-            <button class="resultBtn" onclick="location.href='../main/menu.html'">메인으로 가기</button>
-        </div>
+
+        <button class="resultBtn" onclick="location.href='../main/menu.html'">메인으로 가기</button>
+
+
+        <button class="resultBtn" onclick="location.href='./upgrade.html'">강화 하기</button>
+
     </div>
 
 </div>
