--- a/src/main/resources/templates/hunt/huntSelectMap.html
+++ b/src/main/resources/templates/hunt/huntSelectMap.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="../../static/index.css">
+    <link rel="stylesheet" href="upgrade.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -20,69 +20,33 @@
 <div id="Wrapper">
     <div id="title">
         <p class="titleMessage" onclick="location.href='../../static/index.html'">소드마스터의 시대가 오고있다!</p>
-        <div class="titlebox">
-            <h1>사냥터 선택</h1>
-        </div>
-
-        <div class="huntContainer">
-            <div class="userinfo">
-                <p class="userLevel">1</p>
-                <img src="http://www.hearthcards.net/cards/ac01cc14.png" alt="">
-
-                <button class="usertype" onclick="location.href='../main/type.html'">속성 변경</button>
-
-            </div>
-
-            <div class="buttonBox">
-                <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='hunt1.html'">사냥터 1</button>
-                    <p class="level">권장 레벨 :0~10</p>
-                </div>
-                <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 2</button>
-                    <p class="level">권장 레벨 :0~10</p>
-                </div>
-                <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                    <p class="level">권장 레벨 :0~10</p>
-                </div>
-                <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                    <p class="level">권장 레벨 :0~10</p>
-                </div>
-                <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                    <p class="level">권장 레벨 :0~10</p>
-                </div>
-            </div>
-
-            <div class="buttonBox2">
-                <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='hunt1.html'">사냥터 1</button>
-                    <p class="level">권장 레벨 :0~10</p>
-                </div>
-                <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 2</button>
-                    <p class="level">권장 레벨 :0~10</p>
-                </div>
-                <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                    <p class="level">권장 레벨 :0~10</p>
-                </div>
-                <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                    <p class="level">권장 레벨 :0~10</p>
-                </div>
-                <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='hunt.html'">사냥터 3</button>
-                    <p class="level">권장 레벨 :0~10</p>
-                </div>
-            </div>
-        </div>
-
-        <button class="backToMenu" onclick="location.href='../main/menu.html'">뒤로가기</button>
+    </div>
+    <div class="titlebox">
+        <h1>강화 결과</h1>
     </div>
 
+    <div class="result">
+        <div class="statusWrapper">
+            <div class="status">
+                <h2>유저</h2>
+                <p class="hp"><img src="../img/hpbar.webp" alt=""></p>
+            </div>
+            <div class="cardimg">
+                <img src="http://www.hearthcards.net/cards/ac01cc14.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="buttonBox">
+
+        <button class="resultBtn" onclick="location.href='../main/menu.html'">메인으로 가기</button>
+
+
+        <button class="resultBtn" onclick="location.href='./upgrade.html'">강화 하기</button>
+
+    </div>
+
+</div>
 </body>
 
 </html>
