--- a/src/main/resources/templates/main/menu.html
+++ b/src/main/resources/templates/main/menu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../../../static/index.css">
+    <link rel="stylesheet" href="../../static/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -11,29 +11,32 @@
 </head>
 <body>
     <div id="Wrapper">
-
+       
         <div id="title">
-            <p class="titleMessage" onclick="location.href='../../../static/index.html'">소드마스터의 시대가 오고있다!</p>
+            <p class="titleMessage" onclick="location.href='../../static/index.html'">소드마스터의 시대가 오고있다!</p>
             <div class="main">
                 <p>
                 META RPG
             </p>
 
-                <!--<input type="text" placeholder="사용자의 닉네임을 입력해 주세요..." class="inputbox">-->
-
-                <form action="/user/login" method="post">
-                    <input type="text" name="userName" placeholder="사용자의 닉네임을 입력해 주세요..." class="inputbox">
-                    <input type="submit" value="접속하기">
-                    <!--<button type="button" class="loginBtn" onclick="location.href='./menu.html'">접속하기</button>-->
-                </form>
-                   
-                 <button type="button" class="logoutBtn" onclick="location.href='../../../static/index.html'">나가기</button>
+            <h1 th:text="|${session.userName}님 환영합니다 !!|"></h1>
+            <button type="button" class="huntmapBtn"onclick="location.href='../hunt/huntSelectMap.html'"> 사냥터 입장</button>
             
+
+            <button type="button" class="upgradebtn" onclick="location.href='/upgrade/upgrade'">강화하기</button>
+        
+
+            <button type="button" class="logoutBtn" onclick="location.href='../../static/index.html'">로그아웃</button>
+      
+            </div>
+          
+            
+
+            
+           
+       
             </div>
         </div>
-          
-            </div>
-       
     
 </body>
 </html>
