--- a/src/main/resources/templates/main/type.html
+++ b/src/main/resources/templates/main/type.html
@@ -19,7 +19,7 @@
 <body>
   <div id="Wrapper">
 
-    <div id="title" onclick="location.href='../../../static/index.html'">
+    <div id="title" onclick="location.href='../../static/index.html'">
       <p class="titleMessage">소드마스터의 시대가 오고있다!</p>
         
     </div>
