[#75] 메인 컨트롤러 구현

--- a/src/main/resources/templates/upgrade/upgrade.html
+++ b/src/main/resources/templates/upgrade/upgrade.html
@@ -54,7 +54,7 @@
                 </form>
             </div>
             <div>
-                <button class="backBtn" onclick="location.href='/user/menu'">back</button>
+                <button class="backBtn" onclick="location.href='/menu'">back</button>
             </div>
 
 
