--- a/src/main/resources/templates/user/type.html
+++ b/src/main/resources/templates/user/type.html
@@ -62,7 +62,7 @@
           </li>
         </ul>
       </div>
-      <button class="backToMenu" onclick="location.href='/hunt/huntSelectMap'">Back</button>
+      <button class="backToMenu" onclick="location.href='/menu'">Back</button>
   </div>
 
 
