--- a/src/main/resources/templates/hunt/huntSelectMap.html
+++ b/src/main/resources/templates/hunt/huntSelectMap.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
 
-            <button class="backToMenu" onclick="location.href='../../main/menu.html'">뒤로가기</button>
+            <button class="backToMenu" onclick="location.href='/menu'">뒤로가기</button>
         </div>
 
 </body>
