--- a/src/main/resources/templates/main/menu.html
+++ b/src/main/resources/templates/main/menu.html
@@ -1,42 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../../static/index.css">
+    <script>
+        jQuery(function($) {
+            $("body").css("display", "none");
+            $("body").fadeIn(2000);
+            $("a.transition").click(function(event){
+                event.preventDefault();
+                linkLocation = this.href;
+                $("body").fadeOut(1000, redirectPage);
+            });
+            function redirectPage() {
+                window.location = linkLocation;
+            }
+        });
+    </script>
+    <link rel="stylesheet" href="/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="Wrapper">
-       
-        <div id="title">
-            <p class="titleMessage" onclick="location.href='../../static/index.html'">소드마스터의 시대가 오고있다!</p>
-            <div class="main">
-                <p>
+<div id="Wrapper2">
+
+    <div id="title">
+        <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
+        <div class="main">
+            <p>
                 META RPG
             </p>
 
-            <h1 th:text="|${session.userName}님 환영합니다 !!|"></h1>
-            <button type="button" class="huntmapBtn"onclick="location.href='../hunt/huntSelectMap.html'"> 사냥터 입장</button>
-            
-
-            <button type="button" class="upgradebtn" onclick="location.href='/upgrade/upgrade'">강화하기</button>
-        
-
-            <button type="button" class="logoutBtn" onclick="location.href='../../static/index.html'">로그아웃</button>
-      
-            </div>
-          
-            
-
-            
-           
-       
+            <h1 th:text="|Welcome ${session.userName}!!|" class="titleW"></h1>
+            <div>
+                <div class="menuBtn">
+                    <button type="button" class="huntmapBtn" onclick="location.href='/hunt/huntSelectMap'">Hunt Map</button>
+                </div>
+                <div class="menuBtn">
+                    <button type="button" class="upgradebtn" onclick="location.href='/upgrade/upgrade'">Upgrade</button>
+                </div>
+                <div class="menuBtn">
+                    <button type="button" class="logoutBtn" onclick="location.href='/user/logout'">Logout</button>
+                </div>
             </div>
         </div>
-    
+
+
+
+
+
+
+    </div>
+</div>
+
 </body>
 </html>
