--- a/src/main/resources/templates/main/menu.html
+++ b/src/main/resources/templates/main/menu.html
@@ -36,7 +36,7 @@
             <h1 th:text="|Welcome ${session.userName}!!|" class="titleW"></h1>
             <div>
                 <div class="menuBtn">
-                    <button type="button" class="huntmapBtn" onclick="location.href='/hunt/huntSelectMap'">Hunt Map</button>
+                    <button type="button" class="huntmapBtn" onclick="location.href='/user/info'">Hunt Map</button>
                 </div>
                 <div class="menuBtn">
                     <button type="button" class="upgradebtn" onclick="location.href='/upgrade/upgrade'">Upgrade</button>
