[#78] 사용자 로그인 예외 처리

--- a/src/main/resources/templates/main/loginPage.html
+++ b/src/main/resources/templates/main/loginPage.html
@@ -49,6 +49,14 @@
 
 </div>
 
+<script th:inline="javascript">
+    window.onload = function () {
+        let exceptionMessage = [[${ exception }]];
+        if(exceptionMessage !== null) {
+            alert(exceptionMessage);
+        }
+    }
+</script>
 
 </body>
 </html>
