--- a/src/main/resources/templates/hunt/huntSelectMap.html
+++ b/src/main/resources/templates/hunt/huntSelectMap.html
@@ -54,7 +54,7 @@
 
             <div class="buttonBox">
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/hunt/hunt1'">
+                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster1?mapNum=1'">
                         Naxxramas</button>
                     <p class="level">recommended level : 0~10</p>
                 </div>
