--- a/src/main/resources/templates/hunt/huntmaps/hunt1.html
+++ b/src/main/resources/templates/hunt/huntmaps/hunt1.html
@@ -43,11 +43,17 @@
             <ul class="huntWrapper">
                 <div class="statusWrapper">
                     <div class="status">
-                        <h2>User</h2>
+                        <h2 th:text="${userName}"></h2>
                         <p class="hp"><img src="/img/hpbar.webp" alt=""></p>
                     </div>
                     <div class="cardimg">
-                        <img src="http://www.hearthcards.net/cards/ac01cc14.png" alt="">
+                        <img src="/img/card/소드마스터%20카드.png" alt="">
+                        <div class="userStatus">
+                            <p class="userLevel" th:text="'Level : '+${userLevel}">1</p>
+                            <p class="userLevel" th:text="'STR : '+${userTotalStr}">1</p>
+                            <p class="userLevel" th:text="'TYPE : '+${userType}">1</p>
+
+                        </div>
                     </div>
                 </div>
                 <div class="action">
@@ -71,12 +77,19 @@
                 </div>
                 <div class="statusWrapper">
                     <div class="status">
-                        <h2>Monster</h2>
-                        <p class="hp"><img src="/img/hpbar.webp" alt=""></p>
+                        <h2 th:text="${monsterName}"></h2>
+                        <p class="hp"><img src="/img/hpbar.webp" alt=""/></p>
 
                     </div>
                     <div class="cardimg">
-                        <img src="http://www.hearthcards.net/cards/ac01cc14.png" alt="">
+                        <img th:src="'/img/card/'+${monsterSequence}+'.png'" alt=""/>
+                        <div class="userStatus">
+
+                            <p class="userLevel" th:text="'STR : '+${monsterPower}">1</p>
+                            <p class="userLevel" th:text="'TYPE : '+${monsterElementalType}">1</p>
+
+
+                        </div>
                     </div>
                 </div>
             </ul>
