--- a/src/main/resources/templates/user/type.html
+++ b/src/main/resources/templates/user/type.html
@@ -59,7 +59,7 @@
           <li class="typeList">
 <!--            <img src="/img/leaficon.png" alt="" class="iconImg">-->
             <div class="typeBtn">
-            <button type="submit" class="tbtn" name="type"  value="LEAF">Leaf</button>
+            <button type="submit" class="tbtn" name="type"  value="GRASS">GRASS</button>
           </div>
           </li>
         </ul>
