--- a/src/main/resources/static/css/upgrade.css
+++ b/src/main/resources/static/css/upgrade.css
@@ -74,23 +74,29 @@ body{
 }
 .statusWrapper{
   margin-top: 40px;
+    text-align: center;
+}
+.status{
+    position: relative;
+    top: -187px;
 }
 .status .hp img{
   width: 300px;
   height: 50px;
 }
 .cardimg img{
-  width: 200px;
+  width: 400px;
     margin-top: 20px;
 }
 
 .buttonBox{
-  width:1200px;
-  margin: 120px auto;
-  text-align: center;
-  display: flex;
-  justify-content: space-between;
-  
+    width: 1100px;
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    top: -80px;
 }
  .resultBtn{
   width: 200px;
