--- a/src/main/resources/templates/hunt/huntmaps/hunt1.html
+++ b/src/main/resources/templates/hunt/huntmaps/hunt1.html
@@ -70,7 +70,7 @@
                             <button id="attack">Attack</button>
                         </div>
                         <div>
-                            <button onclick="location.href='/hunt/huntResult'">Run</button>
+                            <button onclick="location.href='/user/info'">Run</button>
                         </div>
                     </div>
 
