--- a/src/main/resources/templates/hunt/huntmaps/hunt9.html
+++ b/src/main/resources/templates/hunt/huntmaps/hunt9.html
@@ -21,68 +21,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="Wrapper9">
-        <div id="title">
-            <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
-        </div>
-        <div class="titlebox">
-            <h1>Sepulcher Of The First Ones</h1>
-        </div>
-
-        <div class="container">
-            <ul class="huntWrapper">
-                <div class="statusWrapper">
-                    <div class="status">
-                        <h2>User</h2>
-                        <p class="hp"><img src="/img/hpbar.webp" alt=""></p>
-                    </div>
-                    <div class="cardimg">
-                        <img src="http://www.hearthcards.net/cards/ac01cc14.png" alt="">
-                    </div>
-                </div>
-                <div class="action">
-                    <div class="actionWrapper">
-                        <div class="userEffect">
-                            <img src="/img/fire.png" alt="" class="UEImg">
-                        </div>
-                        <div class="monsterEffect">
-                            <img src="/img/water.png" alt="" class="MEImg">
-                        </div>
-                    </div>
-                    <div class="btnBox">
-                        <div>
-                            <button id="attack">Attack</button>
-                        </div>
-                        <div>
-                            <button onclick="location.href='/hunt/huntResult'">Run</button>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="statusWrapper">
-                    <div class="status">
-                        <h2>Monster</h2>
-                        <p class="hp"><img src="/img/hpbar.webp" alt=""></p>
-
-                    </div>
-                    <div class="cardimg">
-                        <img src="http://www.hearthcards.net/cards/ac01cc14.png" alt="">
-                    </div>
-                </div>
-            </ul>
-        </div>
-
+<div id="Wrapper9">
+    <div id="title">
+        <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
     </div>
-   <script src="/css/hunt.js"></script>
+    <div class="titlebox">
+        <h1>Sepulcher Of The First Ones</h1>
+    </div>
+
+    <div class="container">
+        <ul class="huntWrapper">
+            <div class="statusWrapper">
+                <div class="status">
+                    <h2 th:text="${userName}"></h2>
+                    <p class="hp"><img src="/img/hpbar.webp" alt=""></p>
+                </div>
+                <div class="cardimg">
+                    <img src="/img/card/소드마스터%20카드.png" alt="">
+                    <div class="userStatus">
+                        <p class="userLevel" th:text="'Level : '+${userLevel}">1</p>
+                        <p class="userLevel" th:text="'STR : '+${userTotalStr}">1</p>
+                        <p class="userLevel" th:text="'TYPE : '+${userType}">1</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="action">
+                <div class="actionWrapper">
+                    <div class="userEffect">
+                        <img src="/img/fire.png" alt="" class="UEImg">
+                    </div>
+                    <div class="monsterEffect">
+                        <img src="/img/water.png" alt="" class="MEImg">
+                    </div>
+                </div>
+                <div class="btnBox">
+                    <div>
+                        <button id="attack">Attack</button>
+                    </div>
+                    <div>
+                        <button onclick="location.href='/user/info'">Run</button>
+                    </div>
+                </div>
+
+            </div>
+            <div class="statusWrapper">
+                <div class="status">
+                    <h2 th:text="${monsterName}"></h2>
+                    <p class="hp"><img src="/img/hpbar.webp" alt=""/></p>
+
+                </div>
+                <div class="cardimg">
+                    <img th:src="'/img/card/'+${monsterSequence}+'.png'" alt=""/>
+                    <div class="userStatus">
+
+                        <p class="userLevel" th:text="'STR : '+${monsterPower}">1</p>
+                        <p class="userLevel" th:text="'TYPE : '+${monsterElementalType}">1</p>
+
+
+                    </div>
+                </div>
+            </div>
+        </ul>
+    </div>
+
+</div>
+<script src="/css/hunt.js"></script>
 </body>
 </html>
