mouse pointer settings from start to user/info

--- a/src/main/resources/templates/hunt/huntSelectMap.html
+++ b/src/main/resources/templates/hunt/huntSelectMap.html
@@ -49,7 +49,7 @@
                     <p class="userLevel" th:text="'TPYE : '+${userType}"></p>
 
                 </div>
-                <button class="usertype" onclick="location.href='/user/type'">Type Change</button>
+                <button class="usertype" onclick="location.href='/user/type'" style="cursor: url(/img/pointer_cur.png), auto">Type Change</button>
 
             </div>
 
