--- a/src/main/resources/templates/main/loginPage.html
+++ b/src/main/resources/templates/main/loginPage.html
@@ -38,11 +38,11 @@
 
         <form action="/user/login" method="post" class="formlogin">
             <input type="text" name="userName" placeholder="사용자의 닉네임을 입력해 주세요..." class="inputbox">
-            <input type="submit" value="접속하기" class="loginBtn">
+            <input type="submit" value="접속하기" class="loginBtn" style="cursor: url(/img/pointer_cur.png), auto">
 
         </form>
         <div class="logoutBtnBox">
-            <button type="button" class="logoutBtn" onclick="location.href='/'">나가기</button>
+            <button type="button" class="logoutBtn" onclick="location.href='/'" style="cursor: url(/img/pointer_cur.png), auto">나가기</button>
         </div>
 
     </div>
