--- a/src/main/resources/templates/main/menu.html
+++ b/src/main/resources/templates/main/menu.html
@@ -37,13 +37,13 @@
             <h1 th:text="|Welcome ${session.userName}!!|" class="titleW"></h1>
             <div>
                 <div class="menuBtn">
-                    <button type="button" class="huntmapBtn" onclick="location.href='/user/info'">Hunt Map</button>
+                    <button type="button" class="huntmapBtn" onclick="location.href='/user/info'" style="cursor: url(/img/pointer_cur.png), auto">Hunt Map</button>
                 </div>
                 <div class="menuBtn">
-                    <button type="button" class="upgradebtn" onclick="location.href='/upgrade/upgrade'">Upgrade</button>
+                    <button type="button" class="upgradebtn" onclick="location.href='/upgrade/upgrade'" style="cursor: url(/img/pointer_cur.png), auto">Upgrade</button>
                 </div>
                 <div class="menuBtn">
-                    <button type="button" class="logoutBtn" onclick="location.href='/user/logout'">Logout</button>
+                    <button type="button" class="logoutBtn" onclick="location.href='/user/logout'" style="cursor: url(/img/pointer_cur.png), auto">Logout</button>
                 </div>
             </div>
         </div>
